--- a/ClientManagerWebAPI/ClientManagerWebAPI.csproj
+++ b/ClientManagerWebAPI/ClientManagerWebAPI.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <Folder Include="LocalMediaStorage\" />
+    <Folder Include="wwwroot\Modules\" />
   </ItemGroup>
 
 </Project>
