-Changed kestrel hosting options to listen on the right port -Removed https kestrel hosting option -Made max size of zoomed-in images 95vh and vw -Fixed bug where "No Results Found" would display at incorrect times -Added a notification that the program is saving when both saving a new client and updating one -Videos now stream with range processing -Images and videos loading from the database now use the API link as the source instead of a blob, and blobs are now used only when image is changed when previewImage(e) is called -Back button's href is now assigned in javascript at load -Fixed minor spacing issue on images by making media-label-container's display none when not needed -Changed all fetches to use the host from window.location.origin, called ip in .js files -Added console logging for when fetch responses are not ok -Fixed some issues with styles not displaing properly on Safari -Updated appsettings.json to have default postgres port and use the default postgres database if an existing client_manager_db database is not found -FIxed an issue in DBSetup where client table would refer to the search dictionary before it was created -Removed Https redirection -Added the Http url ito the app in program.cs

--- a/ClientManagerWebAPI/appsettings.json
+++ b/ClientManagerWebAPI/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Host=Localhost;Port=XXXXXX;Database=client_manager_db;User Id=XXXXXX;Password=XXXXXX;",
-    "DBSetup": "Host=Localhost;Port=XXXXXX;User Id=XXXXXX;Password=XXXXXX;",
+    "Default": "Host=Localhost;Port=5432;Database=XXXXXX;User Id=XXXXXX;Password=XXXXXX;",
+    "DBSetup": "Host=Localhost;Port=5432;User Id=XXXXXX;Database=postgres;Password=XXXXXX;",
     "DBName": "client_manager_db"
   }
 }
